# ahead-prompt

./: .env  ARCHITECTURE_CRITICAL.md  CHATBOT_FEATURE_README.md  CLICK_TO_CLOSE_FEATURE.md  DARK_MODE_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  FEEDBACK_SYSTEM.md  INVITATION_ERROR_SYSTEM.md  PLAN_PRIORITES_ABSOLUES.md  PROJET_RESUME.md  PROMPT_GENERATION_CRITICAL.md  PR_MERGE_FEATURE.md  README.md  README_FEEDBACK.md  README_MIXPANEL.md  README_REDDIT_PIXEL.md  TASK_AUTOMATION_README.md  app.js  colorUtils.js  demo.html  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  script.js  setup-task-automation.js  start.sh  styles.css  tailwind.config.ts  test-compatibility.js  themeManager.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.next/: package.json  trace
.next/cache/: .tsbuildinfo  config.json
.next/types/: routes.d.ts  validator.ts
agent_status_service/: README.md  pyproject.toml  requirements.txt
agent_status_service/app/: auth.py  db.py  main.py  models.py  sse.py
backend/: .env  .env.example  dev.db  package-lock.json  package.json
backend/src/: index.js
frontend/: index.html
motion-design/: README.md  after-effects-animation-script.jsx  after-effects-project.aep  index.html
prisma/: dev.db  schema.prisma
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx
src/components/: AIAgentsDashboard.tsx  AdminUserIdDisplay.tsx  AgentConfigDialog.tsx  AgentMetricsCard.tsx  AppLayout.tsx  AutomationHero.tsx  BinaryTaskManager.tsx  BranchMappingDialog.tsx  BuildThemeWrapper.tsx  (+122 more)
supabase/: config.toml
(+362 files in other folders)
