[tool.poetry]
name = "agent-status-service"
version = "0.1.0"
description = "Service to sync AI agent development status between Ahead and Cursor for Prompt cards"
authors = ["Ahead <dev@ahead.love>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
aiosqlite = "^0.20.0"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

